--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./scss/styles.scss" />
+    <title>FLUFFY TOWN: BOOM STORY</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend&family=Lilita+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="./partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      Path to images as from index.html file
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <main>
+      <load src="./partials/home.html" />
+      <load src="./partials/about-the-game.html" />
+      <load src="./partials/advantages.html" />
+      <load src="./partials/how-to-play.html" />
+      <load src="./partials/why-you-love-this-game.html" />
+      <load src="./partials/user-reviews.html" />
+      <load src="./partials/gallery.html" />
+      <load src="./partials/unique-feauters.html" />
+    </main>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <load src="./partials/footer.html" />
   </body>
 </html>
