--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,33 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" />
+
+    <header class="header-block">
+  <div class="container">
+    <div class="header">
+    <a href=".//../index.html"
+      ><img class="logo" src=".//../public/favicon.svg" alt="logo"
+    /></a>
+    <button class="mob-menu-button">
+      <svg width="18px" height="12px" class="mob-menu-icon">
+        <use href=".//../img/sprite/sprite.svg#mob-menu"></use>
+      </svg>
+      </div>
+    </button>
+     </div>
+   </header>
 
     <main>
-      <load src="./partials/home.html" />
-      <load src="./partials/about-the-game.html" />
-      <load src="./partials/advantages.html" />
-      <load src="./partials/how-to-play.html" />
-      <load src="./partials/why-you-love-this-game.html" />
-      <load src="./partials/user-reviews.html" />
-      <load src="./partials/gallery.html" />
-      <load src="./partials/unique-feauters.html" />
+      <section class="home"></section>
+      <section class="about-the-game"></section>
+      <section class="advantages"></section>
+      <section class="how-to-play"></section>
+      <section class="why-you-love-this-game"></section>
+      <section class="user-reviews"></section>
+      <section class="gallery"></section>
+      <section class="unique-feauters"></section>
     </main>
 
-    <load src="./partials/footer.html" />
+    <footer></footer>
   </body>
 </html>
